neural_coder_workspace/bench1662020616151406/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 43
    input_list = []
    ^
SyntaxError: invalid syntax
